Writing to serial, helloworld!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,8 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# Platform specific dependencies
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+tock-registers = "0.7.0"
+cortex-a = "6.1.0"
