WIP Mailbox sending to VC

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aligned = "0.4.0"
 tock-registers = { version = "0.7.x", optional = true, default-features = false, features = ["register_types"] }
 
 # Platform specific dependencies
